test/langtools/tools/javac/switchexpr/ParserRecovery.out
ParserRecovery.java:31:39: compiler.err.expected: :
ParserRecovery.java:34:31: compiler.err.expected: :
2 errors
